--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,8 +13,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Setup .NET
-    - working-directory: ./docker-api-test
-    - name: Build dockerfile
+    - name: Build dockerfile api-test-1
       run: docker build -t docker/dotnet-api-test .
+      working-directory: ./docker-api-test
