--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -15,4 +15,4 @@ jobs:
     steps:
     - name: Build dockerfile api-test-1
       run: docker build -t docker/dotnet-api-test .
-      working-directory: ./docker-api-test
+      working-directory: docker-api-test
