--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -14,6 +14,6 @@ jobs:
 
     steps:
     - name: debug
-      run: ls
+      run: echo $(ls)
     - name: Build dockerfile api-test-1
       run: docker build -t docker/dotnet-api-test .
