--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: debug
-      run: echo $(ls)
+    - name: Setup
+      uses: actions/checkout@v3
     - name: Build dockerfile api-test-1
       run: docker build -t docker/dotnet-api-test .
