--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -17,3 +17,4 @@ jobs:
       uses: actions/checkout@v3
     - name: Build dockerfile api-test-1
       run: docker build -t docker/dotnet-api-test .
+      working-directory: docker-api-test 
