--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,3 +18,6 @@ jobs:
     - name: Build dockerfile api-test-1
       run: docker build -t docker/dotnet-api-test .
       working-directory: docker-api-test 
+    - name: Build dockerfile api-test-2
+      run: docker build -t docker/dotnet-api-test .
+      working-directory: ../docker-api-test-2 
