--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -15,9 +15,11 @@ jobs:
     steps:
     - name: Setup
       uses: actions/checkout@v3
+      
     - name: Build dockerfile api-test-1
       run: docker build -t docker/dotnet-api-test .
       working-directory: docker-api-test 
+      
     - name: Build dockerfile api-test-2
-      run: docker build -t docker/dotnet-api-test .
-      working-directory: ../docker-api-test-2 
+      run: docker build -t docker/dotnet-api-test-2 .
+      working-directory: docker-api-test-2 
