--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -5,7 +5,7 @@ name: .NET
 
 on:
   push:
-    branches: [ "develop" ]
+    branches: [ "main" ]
 
 jobs:
   build:
@@ -13,15 +13,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - working-directory: docker-api-test
-    - uses: actions/checkout@v3
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v3
-      with:
-        dotnet-version: 8.0.x
-    - name: Restore dependencies
-      run: dotnet restore
-    - name: Build
-      run: dotnet build --no-restore
-    - name: Test
-      run: dotnet test --no-build --verbosity normal
+    - name: Setup
+      uses: actions/checkout@v3
+      
+    - name: Build dockerfile api-test-1
+      run: docker build -t docker/dotnet-api-test .
+      working-directory: docker-api-test 
+      
+    - name: Build dockerfile api-test-2
+      run: docker build -t docker/dotnet-api-test-2 .
+      working-directory: docker-api-test-2 
