changing artifact to dockerimage

--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -28,4 +28,4 @@ jobs:
     - name: Upload image
       uses: ishworkh/docker-image-artifact-upload@v2.0.1
       with:
-        image: "dotnet-api-test-2:latest"
+        image: "docker/dotnet-api-test-2:latest"
