--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -6,7 +6,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -34,3 +33,12 @@ jobs:
       uses: ishworkh/docker-image-artifact-upload@v2.0.1
       with:
         image: "docker/dotnet-api-test-2:latest"
+  
+  deploy:
+    runs-on: 
+      - self-hosted
+    
+    steps:
+      - name: Run Dockerfile image 2
+      - run: docker run docker/dotnet-api-test-2:latest -d -p 5001:5001 -p 5004:5004 -e ASPNETCORE_HTTP_PORT=https://+:5001 -e ASPNETCORE_URLS=https://+:5004
+
