--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -42,6 +42,11 @@ jobs:
       - self-hosted
     
     steps:
+      - name: Downlowad docker image
+        uses: ishworkh/container-image-artifact-download@v2.0.1
+        with:
+          image: "docker/dotnet-api-test-2:latest"
+
       - name: Run Dockerfile image 2
         run: docker run docker/dotnet-api-test-2:latest -d -p 5001:5001 -p 5004:5004 -e ASPNETCORE_HTTP_PORT=https://+:5001 -e ASPNETCORE_URLS=https://+:5004
 
