--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -47,6 +47,6 @@ jobs:
         with:
           image: "docker/dotnet-api-test-2:latest"
 
-      - name: Run Dockerfile image 2
-        run: docker run docker/dotnet-api-test-2:latest -d -p 5001:5001 -p 5004:5004 -e ASPNETCORE_HTTP_PORT=https://+:5001 -e ASPNETCORE_URLS=https://+:5004
+      # - name: Run Dockerfile image 2
+      #   run: docker run docker/dotnet-api-test-2:latest -d -p 5001:5001 -p 5004:5004 -e ASPNETCORE_HTTP_PORT=https://+:5001 -e ASPNETCORE_URLS=https://+:5004
 
