--- a/docker-api-test/Dockerfile
+++ b/docker-api-test/Dockerfile
@@ -10,6 +10,7 @@ FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS runtime
 WORKDIR /release
 COPY --from=build /release ./
 
-EXPOSE 5002
+EXPOSE 5001
+ENV ASPNETCORE_URLS = http://*:5001
 
 ENTRYPOINT [ "dotnet", "docker-api-test.dll" ]
