--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -43,7 +43,10 @@ jobs:
     
     steps:
       - name: Checkout 
-        uses: actions/checkout@v2
+        run: ls -la
+      
+      - name: Debug 2
+        run: cat /scripts-runner/devdeploy.sh
 
       - name: Download docker image
         uses: ishworkh/container-image-artifact-download@v1.0.0
