--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -13,10 +13,6 @@ jobs:
     - name: Setup
       uses: actions/checkout@v3
       
-    - name: Build dockerfile api-test-1 
-      run: docker build -t docker/dotnet-api-test .
-      working-directory: docker-api-test 
-      
     - name: Build dockerfile api-test-2
       run: docker build -t docker/dotnet-api-test-2 .
       working-directory: docker-api-test-2 
@@ -24,11 +20,6 @@ jobs:
     - name: Test api-2
       run: dotnet test 
       working-directory: docker-api-test-2 
-
-    - name: Upload image 1
-      uses: ishworkh/docker-image-artifact-upload@v2.0.1
-      with:
-        image: "docker/dotnet-api-test:latest"
 
     - name: Upload image 2
       uses: ishworkh/docker-image-artifact-upload@v2.0.1
@@ -43,8 +34,11 @@ jobs:
     
     steps:
       - name: Checkout 
+        uses: actions/checkout@v3
+
+      - name: Debug 1
         run: ls -la
-      
+
       - name: Debug 2
         run: cat /scripts-runner/devdeploy.sh
 
