--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -10,8 +10,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Setup 
+    - name: Setup
       uses: actions/checkout@v3
+      
       
     - name: Build dockerfile api-test-2
       run: docker build -t docker/dotnet-api-test-2 .
@@ -21,23 +22,23 @@ jobs:
       run: dotnet test 
       working-directory: docker-api-test-2 
 
+
     - name: Upload image 2
       uses: ishworkh/docker-image-artifact-upload@v2.0.1
       with:
         image: "docker/dotnet-api-test-2:latest"
   
-  deploy: 
+  deploy:
     needs: build
     environment: dev
     runs-on: 
       - self-hosted
     
     steps:
-      - name: Checkout 
-        uses: actions/checkout@v3
-
-      - name: Download docker image
+      - name: Downlowad docker image
         uses: ishworkh/container-image-artifact-download@v1.0.0
         with:
           image: "docker/dotnet-api-test-2:latest"
 
+      # - name: Run Dockerfile image 2
+      #   run: docker run docker/dotnet-api-test-2:latest -d -p 5001:5001 -p 5004:5004 -e ASPNETCORE_HTTP_PORT=https://+:5001 -e ASPNETCORE_URLS=https://+:5004
