--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -13,7 +13,6 @@ jobs:
     - name: Setup
       uses: actions/checkout@v3
       
-      
     - name: Build dockerfile api-test-2
       run: docker build -t docker/dotnet-api-test-2 .
       working-directory: docker-api-test-2 
@@ -40,5 +39,8 @@ jobs:
         with:
           image: "docker/dotnet-api-test-2:latest"
 
-      # - name: Run Dockerfile image 2
-      #   run: docker run docker/dotnet-api-test-2:latest -d -p 5001:5001 -p 5004:5004 -e ASPNETCORE_HTTP_PORT=https://+:5001 -e ASPNETCORE_URLS=https://+:5004
+      - name: Secret echo
+        run: echo  ${{ secrets.super_secret_test }}
+
+      - name: Run container
+        run: docker run -d -p 5002:5002 docker/dotnet-api-test-2:latest
